--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,43 +9,25 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <h1>Proyecto Fundamentos del Dieseño Interactivo</h1>
-        </div>
-      </div>
+    <div id = "background">
+          <h1 style = "margin: auto"><center>Proyecto Fundamentos del Diseño Interactivo</h1></center>
+    </div>
+    <div>
 
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <div class="callout">
+        <ul class="horizontal menu" data-magellan>
+          <li><a href="https://rafaelelu.github.io/index.html">Menú</a></li>
+          <li><a href="#second">Quiénes Somos</a></li>
+        </ul>
+
+          <div class="callout primary">
             <h1>¡¡Sobre Nosotros!!</h1>
             <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
             <center>
             <h2><p>Rafael Elu</p></h2>
           </center>
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 cell">
-                <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-              </div>
-              <div class="large-4 medium-4 cell">
-                <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-              </div>
-              <div class="large-4 medium-4 cell">
-                <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-              </div>
-            </div>
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 medium-push-2 cell">
-                <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-              </div>
-              <div class="large-4 medium-4 medium-pull-2 cell">
-                <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+
+    </div>
 
 
     <script src="js/vendor/jquery.js"></script>
