--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div id = "background">
+    <div id = "title-background">
           <h1 style = "margin: auto"><center>Proyecto Fundamentos del Diseño Interactivo</h1></center>
     </div>
     <div>
 
-        <ul class="horizontal menu" data-magellan>
+        <ul class="horizontal menu" id="tab-bar-background" data-magellan>
           <li><a href="https://rafaelelu.github.io/index.html">Menú</a></li>
           <li><a href="#second">Quiénes Somos</a></li>
         </ul>
