--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div id = "background">
+    <div id = "title-background">
           <h1 style = "margin: auto"><center>Proyecto Fundamentos del Diseño Interactivo</h1></center>
     </div>
     <div>
-    	<ul class="horizontal menu" data-magellan>
-	  		<li><a href="#first">Menú</a></li>
-	 	 	<li><a href="https://rafaelelu.github.io/AboutUs.html">Quiénes Somos</a></li>
-		</ul>
 
-	      <div>
-	      	<div class="callout primary">
+    	<ul class="horizontal menu" id="tab-bar-background" data-magellan>
+	  		<li><a href="#first">Menú</a></li>
+	 	 	  <li><a href="https://rafaelelu.github.io/AboutUs.html">Quiénes Somos</a></li>
+		  </ul>
+
+	      <div><center>
+	      	<div class="callout primary" id="box">
 	           <h3>Problema(s):</h3>
 	           <p>1. Alumnos no saben con qué profesores meter sus materias.</p>
 	           <p>2. ECOAS tienen impacto después de que acaba el semestre, por lo que alumnos no pueden gozar de los beneficios de sus retroalimentaciones.</p>
 	       </div>
-	       <div class="callout primary">
+	       <div class="callout primary" id="box">
 	       	<h3>Solución:</h3>
-	            <p>Una página web donde alumnos puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impcato que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
-	       </div>
+	            <p>Una página web donde alumnos puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impacto que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
+	       </div></center>
 	      </div>
     </div>
 
