--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,24 +9,30 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+
     <div id = "title-background">
           <h1 style = "margin: auto"><center>Proyecto Fundamentos del Diseño Interactivo</h1></center>
     </div>
-    <div>
 
+    <div>
         <ul class="horizontal menu" id="tab-bar-background" data-magellan>
           <li><a href="https://rafaelelu.github.io/index.html">Menú</a></li>
           <li><a href="#second">Quiénes Somos</a></li>
         </ul>
 
           <div class="callout primary">
-            <h1>¡¡Sobre Nosotros!!</h1>
-            <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
+            <h1>Quiénes somos</h1>
+            <h4><p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p></h4>
             <center>
             <h2><p>Rafael Elu</p></h2>
+            <img src="http://i.imgur.com/13V8VfX.jpg" width="10%">
+            <h4>Info shidori</h4></br>
+          </br>
+            <h2>William Velarde</h2>
+            <img src="http://i.imgur.com/gCwKDxP.jpg" width="10%">
+            <h4>Info Shidori</h4>
           </center>
         </div>
-
     </div>
 
 
