--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,15 +15,25 @@
     </div>
 
     <div>
-        <ul class="horizontal menu" id="tab-bar-background" data-magellan>
-          <li><a href="https://rafaelelu.github.io/index.html">Menú</a></li>
-          <li><a href="#second">Quiénes Somos</a></li>
-        </ul>
-
-          <div class="callout primary">
+        <div class="top-bar">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Proyecto FDI</li>
+            <li><a href="https://rafaelelu.github.io/index.html">Menú</a></li>
+            <li><a href="">Quiénes Somos</a></li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><input type="search" placeholder="Search"></li>
+            <li><button type="button" class="button">Search</button></li>
+          </ul>
+        </div>
+      </div>
+          <div><center>
+          <div class="callout primary" id="box">
             <h1>Quiénes somos</h1>
-            <h4><p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p></h4>
-            <center>
+            <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
             <h2><p>Rafael Elu</p></h2>
             <img src="http://i.imgur.com/13V8VfX.jpg" width="10%">
             <h4>Info shidori</h4></br>
@@ -31,8 +41,8 @@
             <h2>William Velarde</h2>
             <img src="http://i.imgur.com/gCwKDxP.jpg" width="10%">
             <h4>Info Shidori</h4>
-          </center>
-        </div>
+          </div>
+          </div></center>
     </div>
 
 
