--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
     </div>
     <div>
 
-    	<ul class="horizontal menu" id="tab-bar-background" data-magellan>
-	  		<li><a href="#first">Menú</a></li>
-	 	 	  <li><a href="https://rafaelelu.github.io/AboutUs.html">Quiénes Somos</a></li>
-		  </ul>
+    	<div class="top-bar">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Proyecto FDI</li>
+            <li><a href="">Menú</a></li>
+            <li><a href="https://rafaelelu.github.io/AboutUs.html">Quiénes Somos</a></li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><input type="search" placeholder="Search"></li>
+            <li><button type="button" class="button">Search</button></li>
+          </ul>
+        </div>
+      </div>
 
 	      <div><center>
 	      	<div class="callout primary" id="box">
@@ -28,7 +39,14 @@
 	       <div class="callout primary" id="box">
 	       	<h3>Solución:</h3>
 	            <p>Una página web donde alumnos puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impacto que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
-	       </div></center>
+	       </div>
+         <div class="callout primary" id="box">
+          <h3>Retroalimentaciones:</h3>
+              <p>1. Hay que dar prioridad a comentarios (objetivos) que a los formularios.</p>
+              <p>2. Tener mucho cuidado con comentarios obscenos que puedan aparecer y afectar la imagen de la página. </p>
+         </div>
+         <img src="http://i.imgur.com/nRJPkOy.jpg">
+         </center>
 	      </div>
     </div>
 
