--- a/index.html
+++ b/index.html
@@ -9,45 +9,38 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div id = "title-background">
-          <h1 style = "margin: auto"><center>Proyecto Fundamentos del Diseño Interactivo</h1></center>
-    </div>
-    <div>
 
-    	<div class="top-bar">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">Proyecto FDI</li>
-            <li><a href="">Menú</a></li>
-            <li><a href="https://rafaelelu.github.io/AboutUs.html">Quiénes Somos</a></li>
-          </ul>
-        </div>
+      <div class="top-bar">
+      <div style="color: #2636C7; margin-left: 5%">
+          <h2>Proyecto FDI</h2>
+      </div>
         <div class="top-bar-right">
-          <ul class="menu">
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li><a href="" style="color: #2636C7">Menú</a></li>
+            <li><a href="" style="color: #2636C7">Proyecto FDI</a></li>
+            <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #2636C7">Quiénes Somos</a></li>
           </ul>
         </div>
       </div>
 
-	      <div><center>
-	      	<div class="callout primary" id="box">
-	           <h3>Problema(s):</h3>
-	           <p>1. Alumnos no saben con qué profesores meter sus materias.</p>
-	           <p>2. ECOAS tienen impacto después de que acaba el semestre, por lo que alumnos no pueden gozar de los beneficios de sus retroalimentaciones.</p>
-	       </div>
-	       <div class="callout primary" id="box">
-	       	<h3>Solución:</h3>
-	            <p>Una página web donde alumnos puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impacto que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
-	       </div>
-         <div class="callout primary" id="box">
+        <div><center>
+          <div id="box">
+             <h3>Problema(s):</h3>
+             <p>1. Alumnos no saben con qué profesores meter sus materias.</p>
+             <p>2. ECOAS tienen impacto después de que acaba el semestre, por lo que alumnos no pueden gozar de los beneficios de sus retroalimentaciones.</p>
+         </div>
+         <div id="box">
+          <h3>Solución:</h3>
+              <p>Una página web donde alumnos puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impacto que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
+         </div>
+         <div id="box">
           <h3>Retroalimentaciones:</h3>
               <p>1. Hay que dar prioridad a comentarios (objetivos) que a los formularios.</p>
               <p>2. Tener mucho cuidado con comentarios obscenos que puedan aparecer y afectar la imagen de la página. </p>
          </div>
          <img src="http://i.imgur.com/nRJPkOy.jpg">
          </center>
-	      </div>
+        </div>
     </div>
 
     <script src="js/vendor/jquery.js"></script>
