--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,38 +10,31 @@
   </head>
   <body>
 
-    <div id = "title-background">
-          <h1 style = "margin: auto"><center>Proyecto Fundamentos del Diseño Interactivo</h1></center>
-    </div>
-
-    <div>
-        <div class="top-bar">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">Proyecto FDI</li>
-            <li><a href="https://rafaelelu.github.io/index.html">Menú</a></li>
-            <li><a href="">Quiénes Somos</a></li>
-          </ul>
-        </div>
+    <div class="top-bar">
+      <div style="color: #2636C7; margin-left: 5%">
+          <h2>Proyecto FDI</h2>
+      </div>
         <div class="top-bar-right">
-          <ul class="menu">
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li><a href="https://rafaelelu.github.io/" style="color: #2636C7">Menú</a></li>
+            <li><a href="" style="color: #2636C7">Proyecto FDI</a></li>
+            <li><a href="" style="color: #2636C7">Quiénes Somos</a></li>
           </ul>
         </div>
       </div>
+
           <div><center>
-          <div class="callout primary" id="box">
-            <h1>Quiénes somos</h1>
-            <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
-            <h2><p>Rafael Elu</p></h2>
-            <img src="http://i.imgur.com/13V8VfX.jpg" width="10%">
-            <h4>Info shidori</h4></br>
-          </br>
-            <h2>William Velarde</h2>
-            <img src="http://i.imgur.com/gCwKDxP.jpg" width="10%">
-            <h4>Info Shidori</h4>
-          </div>
+            <div id="box">
+              <h1>Quiénes somos</h1>
+              <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
+              <h2><p>Rafael Elu</p></h2>
+              <img src="http://i.imgur.com/13V8VfX.jpg" width="10%">
+              <h4>Info shidori</h4></br>
+            </br>
+              <h2>William Velarde</h2>
+              <img src="http://i.imgur.com/gCwKDxP.jpg" width="10%">
+              <h4>Info Shidori</h4>
+            </div>
           </div></center>
     </div>
 
