--- a/AboutUs.html
+++ b/AboutUs.html
@@ -16,6 +16,7 @@
       </div>
         <div class="top-bar-right">
           <ul class="dropdown menu" data-dropdown-menu>
+            <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #2636C7">Examen Primer Parcial</a></li>
             <li><a href="https://rafaelelu.github.io/" style="color: #2636C7">Menú</a></li>
             <li><a href="" style="color: #2636C7">Proyecto FDI</a></li>
             <li><a href="" style="color: #2636C7">Quiénes Somos</a></li>
@@ -27,13 +28,20 @@
             <div id="box">
               <h1>Quiénes somos</h1>
               <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
-              <h2><p>Rafael Elu</p></h2>
-              <img src="http://i.imgur.com/13V8VfX.jpg" width="10%">
-              <h4>Info shidori</h4></br>
+              <center><h2>Rafael Elu</h2></center>
+              <center><img src="http://i.imgur.com/13V8VfX.jpg" width="10%"></center>
+              <p>Estudiante de Ingeniería en Sistemas Computacionales en el Tecnológico de Monterrey Campus Gdl.</p>
+              <p>Programador, cinéfilo y amante de la buena música.</p>
+              <a href="https://github.com/rafaelelu">Rafael Elu en GitHub</a></br>
+              <a href="https://www.linkedin.com/in/rafael-elu-b98684149/">Rafael Elu en LinkedIn</a></br>
+
             </br>
-              <h2>William Velarde</h2>
-              <img src="http://i.imgur.com/gCwKDxP.jpg" width="10%">
-              <h4>Info Shidori</h4>
+              <center><h2>William Velarde</h2></center>
+              <center><img src="http://i.imgur.com/gCwKDxP.jpg" width="10%"></center>
+              <p>Estudiante de Ingeniería en Sistemas Computacionales en el Tecnológico de Monterrey Campus Gdl.</p>
+              <p>Mexicano amante y “noob” de la programación.</p>
+              <a href="https://github.com/waffles97">William Velarde en GitHub</a></br>
+              <a href="https://www.linkedin.com/in/william-velarde-sarmiento-426685149/">William Velarde en LinkedIn</a></br>
             </div>
           </div></center>
     </div>
