--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
         <div class="top-bar-right">
           <ul class="dropdown menu" data-dropdown-menu>
+            <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #2636C7">Examen Primer Parcial</a></li>
             <li><a href="" style="color: #2636C7">Menú</a></li>
             <li><a href="" style="color: #2636C7">Proyecto FDI</a></li>
             <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #2636C7">Quiénes Somos</a></li>
