--- a/AboutUs.html
+++ b/AboutUs.html
@@ -17,7 +17,7 @@
         <div class="top-bar-right">
           <ul class="dropdown menu" data-dropdown-menu>
             <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #2636C7">Examen Primer Parcial</a></li>
-            <li><a href="https://rafaelelu.github.io/" style="color: #2636C7">Menú</a></li>
+            <li><a href="https://rafaelelu.github.io/" style="color: #2636C7">Página Principal</a></li>
             <li><a href="" style="color: #2636C7">Proyecto FDI</a></li>
             <li><a href="" style="color: #2636C7">Quiénes Somos</a></li>
           </ul>
