--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   </head>
   <body>
 
-      <div class="top-bar">
-      <div style="color: #2636C7; margin-left: 5%">
+      <div class="top-bar" style="background-color: #2636C7">
+      <div style="color: #e6e6e6; margin-left: 5%">
           <h2>Proyecto FDI</h2>
       </div>
         <div class="top-bar-right">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #2636C7">Examen Primer Parcial</a></li>
-            <li><a href="" style="color: #2636C7">Página Principal</a></li>
-            <li><a href="" style="color: #2636C7">Proyecto FDI</a></li>
-            <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #2636C7">Quiénes Somos</a></li>
+          <ul class="dropdown menu" data-dropdown-menu style="background-color: #2636C7; color: #e6e6e6">
+            <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #e6e6e6">Examen Primer Parcial</a></li>
+            <li><a href="" style="color: #e6e6e6">Página Principal</a></li>
+            <li><a href="" style="color: #e6e6e6">Proyecto FDI</a></li>
+            <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #e6e6e6">Quiénes Somos</a></li>
           </ul>
         </div>
       </div>
