--- a/PrimerParcial.html
+++ b/PrimerParcial.html
@@ -60,7 +60,7 @@
          <div id="box">
           <h3>Write a qualitative evaluation of your work during the first term. Explain. (Each member)</h3>
           <h4>William:</h4>
-          <p>A pesar de que no recordaba mucho de como hacer paginas web poco a poco fui ayudando en la creación del proyecto y gracias a Rafael quien me estuvo guiando en el camino. En lo que más ayude fue en la página de “quiénes somos” y propuse algunas ideas más para el proyecto, que más tarde fueron descartadas.</p>
+          <p>A pesar de que no recordaba mucho de cómo hacer páginas web, poco a poco fui ayudando en la creación del proyecto y gracias a Rafael quien me estuvo guiando en el camino. En lo que más ayude fue en la página de “Quiénes Somos” y propuse algunas ideas más para el proyecto, que más tarde fueron descartadas.</p>
           <h4>Rafael:</h4>
           <p>En el primer parcial creamos dos archivos en formato html: un index [que es nuestra página principal] y una página donde explicamos quiénes somos. También usamos el <i>framework</i> de Foundation, donde aprovechamos sobre todo la barra superior donde mostramos el menú de la página y el archivo ‘app.css’ que usamos para dar formato a nuestro texto.</p>
          </div>
