--- a/PrimerParcial.html
+++ b/PrimerParcial.html
@@ -73,7 +73,7 @@
 
          <div id="box">
           <h3>Propose a no technological solution for your problem. Use CSS3 animations.</h3>
-          <p>Nuestra solución no tecnológica es que por dos días seguidos calificaras a tus profesores en unas pequeñas casillas. Nosotros te brindaremos algunas hojas de papel con el formato a llenar. Dos semanas después se publicarán las calificaciones en las pequeñas pizarras de corcho que están cerca de los salones en cada piso, de esta manera tanto los alumnos como los profesores podrán enterarse de las calificaciones y los comentarios.</p>
+          <p>Nuestra solución no tecnológica es que por dos días seguidos califiques a tus profesores en unas pequeñas casillas. Nosotros te brindaremos algunas hojas de papel con el formato a llenar. Dos semanas después se publicarán las calificaciones en las pequeñas pizarras de corcho que están cerca de los salones en cada piso. De esta manera tanto los alumnos como los profesores podrán enterarse de las calificaciones y los comentarios.</p>
          </div>
 
          <div id="box">
