--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          </div>
          <div id="box">
           <h3>Solución:</h3>
-              <p>Una página web donde alumnos puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impacto que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
+              <p>Una página web donde alumnos del Tec puedan llenar formularios objetivos sobre profesores. Así alumnos pueden calificar a profesores cualquier día. Los profesores podrían ver en cualquier momento el impacto que tienen sobre sus alumnos. Alumnos pueden ver comentarios sobre posibles profesores futuros.</p>
          </div>
          <div id="box">
           <h3>Retroalimentaciones:</h3>
