--- a/PrimerParcial.html
+++ b/PrimerParcial.html
@@ -16,10 +16,12 @@
       </div>
         <div class="top-bar-right">
           <ul class="dropdown menu" data-dropdown-menu style="background-color: #2636C7; color: #e6e6e6">
-            <li><a href="" style="color: #e6e6e6">Examen Primer Parcial</a></li>
             <li><a href="https://rafaelelu.github.io/" style="color: #e6e6e6">Página Principal</a></li>
             <li><a href="" style="color: #e6e6e6">Proyecto FDI</a></li>
             <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #e6e6e6">Quiénes Somos</a></li>
+            <li><a href="https://rafaelelu.github.io/Persona" style="color: #e6e6e6">Persona</a></li>
+            <li><a href="https://rafaelelu.github.io/PlanDeNegocios.html" style="color: #e6e6e6">Plan de Negocios</a></li>
+            <li><a href="" style="color: #e6e6e6">Primer Parcial</a></li>
           </ul>
         </div>
       </div>
@@ -90,7 +92,6 @@
 
          </center>
         </div>
-    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
