--- a/PlanDeNegocios.html
+++ b/PlanDeNegocios.html
@@ -22,6 +22,7 @@
             <li><a href="https://rafaelelu.github.io/Persona.html" style="color: #e6e6e6">Persona</a></li>
             <li><a href="" style="color: #e6e6e6">Plan de Negocios</a></li>
             <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #e6e6e6">Primer Parcial</a></li>
+            <li><a href="https://rafaelelu.github.io/SegundoParcial.html" style="color: #e6e6e6">Segundo Parcial</a></li>
           </ul>
         </div>
       </div>
