--- a/AboutUs.html
+++ b/AboutUs.html
@@ -29,9 +29,9 @@
 
           <div><center>
             <div id="box">
-              <h1>Quiénes somos</h1>
+              <h1><center>Quiénes somos</center></h1>
               <p>En esta pequeña sección les mostraremos nuestros perfiles y daremos a conocer un poco de información sobre nosotros.</p>
-              <center><h2>Rafael Elu</h2></center>
+              <h2>Rafael Elu</h2>
               <center><img src="http://i.imgur.com/13V8VfX.jpg" width="10%"></center>
               <p>Estudiante de Ingeniería en Sistemas Computacionales en el Tecnológico de Monterrey Campus Gdl.</p>
               <p>Programador, cinéfilo y amante de la buena música.</p>
@@ -39,7 +39,7 @@
               <a href="https://www.linkedin.com/in/rafael-elu-b98684149/">Rafael Elu en LinkedIn</a></br>
 
             </br>
-              <center><h2>William Velarde</h2></center>
+              <h2>William Velarde</h2>
               <center><img src="http://i.imgur.com/gCwKDxP.jpg" width="10%"></center>
               <p>Estudiante de Ingeniería en Sistemas Computacionales en el Tecnológico de Monterrey Campus Gdl.</p>
               <p>Mexicano amante y “noob” de la programación.</p>
