--- a/SegundoParcial.html
+++ b/SegundoParcial.html
@@ -20,7 +20,7 @@
             <li><a href="" style="color: #e6e6e6">Proyecto FDI</a></li>
             <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #e6e6e6">Quiénes Somos</a></li>
             <li><a href="https://rafaelelu.github.io/Persona.html" style="color: #e6e6e6">Persona</a></li>
-            <li><a href="" style="color: #e6e6e6">Plan de Negocios</a></li>
+            <li><a href="https://rafaelelu.github.io/PlanDeNegocios.html" style="color: #e6e6e6">Plan de Negocios</a></li>
             <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #e6e6e6">Primer Parcial</a></li>
             <li><a href="" style="color: #e6e6e6">Segundo Parcial</a></li>
           </ul>
