--- a/Persona.html
+++ b/Persona.html
@@ -59,7 +59,7 @@
                     <div class="contact-form">
                       <span class="close">&times;</span>
                       <h3><center>Personalidad</center></h3>
-                      <p>Texto</p>
+                      <p>Nuestra persona es crítica y le gusta ser escuchada. Nuestra persona es curiosa e intuitiva. Cuando tiene algo que decir, lo dice. No hay comentario que se guarde. Le gusta que sus comentarios puedan ayudar a la comunidad. </p>
                     </div>
                   </div>
                 </div>
@@ -74,7 +74,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Referencias e influencias</center></h3>
-                      <p>Texto</p>
+                      <p>Padres, otros alumnos, profesores, redes sociales como: Facebook, Twitter e Instagram.</p>
                     </div>
                   </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Arquetipo y citas</center></h3>
-                      <p>Texto</p>
+                        <p><i>¿Cómo es este profesor?</i><br><i>¿Qué profesores dan esta materia?</i></p>
                     </div>
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Pericia tecnológica</center></h3>
-                      <p>Texto</p>
+                      <p>Nuestra persona es una experta en navegar en la red. Si no sabe cómo usar una página web, aprende rápido. Es un cibernauta adaptable.</p>
                     </div>
                   </div>
                 </div>
@@ -121,7 +121,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Metas de UX</center></h3>
-                      <p>Texto</p>
+                      <p>Nuestra página debe ser: servicial, referencial, segura y sobre todo, útil.</p>
                     </div>
                   </div>
                 </div>
@@ -138,7 +138,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Plataformas y dispositivos usados</center></h3>
-                      <p>Texto</p>
+                      <p>Tablets, celulares y computadoras tanto de escritorio, como portátiles.</p>
                     </div>
                   </div>
                 </div>
@@ -153,7 +153,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Aplicaciones usadas</center></h3>
-                      <p>Texto</p>
+                      <p>Páginas web más utilizadas: redes sociales (Facebook, Twitter, Instagram, etc), páginas de entretenimiento (Netflix,Youtube, etc) y plataformas educativa (Blackboard, Schoology, Google Classroom, etc).</p>
                     </div>
                   </div>
                 </div>
@@ -168,7 +168,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Debe hacer / Nunca debe</center></h3>
-                      <p>Texto</p>
+                      <p>Debe hacer: ser práctico y fácil de usar.<br>Nunca debe: el usuario no debe tomar más de 5min evaluando a un profesor.</p>
                     </div>
                   </div>
                 </div>
@@ -183,7 +183,7 @@
                     <div class="contact-form">
                       <a class="close">&times;</a>
                       <h3><center>Relación con la marca y el producto</center></h3>
-                      <p>Texto</p>
+                      <p>El plan es que nuestra persona busque activamente nuestra página web cada que necesite información sobre un profesor. Lo más lógico sería que fuera cada que se vayan a hacer los horarios.</p>
                     </div>
                   </div>
                 </div>
