--- a/PrimerParcial.html
+++ b/PrimerParcial.html
@@ -17,12 +17,12 @@
         <div class="top-bar-right">
           <ul class="dropdown menu" data-dropdown-menu style="background-color: #2636C7; color: #e6e6e6">
             <li><a href="https://rafaelelu.github.io/" style="color: #e6e6e6">Página Principal</a></li>
-            <li><a href="" style="color: #e6e6e6">Proyecto FDI</a></li>
+            <li><a href="https://rafaelelu.github.io/ProyectoFDI.html" style="color: #e6e6e6">ECOAS CHIDAS</a></li>
             <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #e6e6e6">Quiénes Somos</a></li>
             <li><a href="https://rafaelelu.github.io/Persona" style="color: #e6e6e6">Persona</a></li>
             <li><a href="https://rafaelelu.github.io/PlanDeNegocios.html" style="color: #e6e6e6">Plan de Negocios</a></li>
-            <li><a href="" style="color: #e6e6e6">Primer Parcial</a></li>
-            <li><a href="https://rafaelelu.github.io/SegundoParcial.html" style="color: #e6e6e6">Segundo Parcial</a></li>
+            <li><a href="" style="color: #e6e6e6">Parcial 1</a></li>
+            <li><a href="https://rafaelelu.github.io/SegundoParcial.html" style="color: #e6e6e6">Parcial 2</a></li>
           </ul>
         </div>
       </div>
