--- a/PropuestaDeNegocios.html
+++ b/PropuestaDeNegocios.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oropuesta de Negocios</title>
+    <title>Propuesta de Negocios</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <h1><center>Plan de Negocios</center></h1>
+      <h1><center>Propuesta de Negocios</center></h1>
 
       <div><center>
          <div id="box">
