--- a/PrimerParcial.html
+++ b/PrimerParcial.html
@@ -20,7 +20,7 @@
             <li><a href="https://rafaelelu.github.io/ProyectoFDI.html" style="color: #e6e6e6">ECOAS CHIDAS</a></li>
             <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #e6e6e6">Quiénes Somos</a></li>
             <li><a href="https://rafaelelu.github.io/Persona" style="color: #e6e6e6">Persona</a></li>
-            <li><a href="https://rafaelelu.github.io/PlanDeNegocios.html" style="color: #e6e6e6">Propuesta de Negocios</a></li>
+            <li><a href="https://rafaelelu.github.io/PropuestaDeNegocios.html" style="color: #e6e6e6">Propuesta de Negocios</a></li>
             <li><a href="" style="color: #e6e6e6">Parcial 1</a></li>
             <li><a href="https://rafaelelu.github.io/SegundoParcial.html" style="color: #e6e6e6">Parcial 2</a></li>
           </ul>
