--- a/PropuestaDeNegocios.html
+++ b/PropuestaDeNegocios.html
@@ -20,7 +20,7 @@
             <li><a href="https://rafaelelu.github.io/ProyectoFDI.html" style="color: #e6e6e6">ECOAS CHIDAS</a></li>
             <li><a href="https://rafaelelu.github.io/AboutUs.html" style="color: #e6e6e6">Quiénes Somos</a></li>
             <li><a href="https://rafaelelu.github.io/Persona.html" style="color: #e6e6e6">Persona</a></li>
-            <li><a href="" style="color: #e6e6e6">Propuesta de Negocios</a></li>
+            <li><a href="https://rafaelelu.github.io/PropuestaDeNegocios.html" style="color: #e6e6e6">Propuesta de Negocios</a></li>
             <li><a href="https://rafaelelu.github.io/PrimerParcial.html" style="color: #e6e6e6">Parcial 1</a></li>
             <li><a href="https://rafaelelu.github.io/SegundoParcial.html" style="color: #e6e6e6">Parcial 2</a></li>
           </ul>
@@ -75,28 +75,6 @@
          <div id="box">
              <h3>Costos y consideraciones</h3>
              <p>Se planea que el proyecto esté terminado en un plazo de dos meses. Nuestro precio es de $150.00 MXN la hora y se cumplen 40 horas a la semana de trabajo, lo que daría un total de $50,000.00 MXN por todo el proyecto.</p>
-         </div>
-          
-         <div id="box">
-             <h3>Entrevista 1</h3>
-         </div>
-         <div class="responsive-embed">
-              <iframe width="20%" height="20%" src="https://www.youtube.com/watch?v=yM5AJDDgayE&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
-         </div>
-          
-         <div id="box">
-             <h3>Entrevista 2</h3>
-             <p>Entrevistador: William Velarde Sarmiento.</p>
-             <p>Persona entrevistada: Ana Casillas Morales. Ingeniera en Sistemas Computacionales.</p>
-             <p>Edad: 22 años</p>
-             <p>W – “Hola, Ana, mucho gusto.”</p>
-             <p>A – “Hola, buenas tardes. Es un placer ayudarte con este pequeño proyecto.”</p>
-             <p>W – “Gracias por tomarte el tiempo de contestar esta pequeña entrevista. Y dime Ana, ¿para ti que es lo más importante en el diseño de una página web?”</p>
-             <p>A – “Creatividad, backend, que el código este muy bien estructurado y limpio. El diseño de una página web de hoy en día es “menos es más”, y con esto me refiero a que una página se debe de ver elegante y no saturada con contenido innecesario.”</p>
-             <p>W – “Y, ¿Para ti que es lo más importante en una página web orientada a la calificación de profesores en una Universidad?, ¿Cuáles crees que son los elementos más importantes que se deben de considerar?”</p>
-             <p>A –“En este tipo de páginas es muy importante hacer que el usuario sienta que su opinión es importante y hacer que se sienta escuchado. También el control de los comentarios es algo sumamente importante. Y no te olvides de hacer las encuestas simples y cortas, ya que si les presentas encuestas de 20-30 min, no se atreverán a hacerlas.”</p>
-             <p>W – “Bueno, muchas gracias por tu tiempo y tus opiniones. Que tengas un muy buen día.”</p>
-             <p>A – “Gracias a ti. Fue un gusto poder ayudarte, suerte.”</p>
          </div>
          </center>
         </div>
