--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
              <p>W – “Bueno, muchas gracias por tu tiempo y tus opiniones. Que tengas un muy buen día.”</p>
              <p>A – “Gracias a ti. Fue un gusto poder ayudarte, suerte.”</p>
          </div>
+            
+            <h3>Mockup en papael</h3>
+            <img src="https://i.imgur.com/MDeqGOQ.jpg" width="60%">
          </center>
         </div>
 
