--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
              <p>A – “Gracias a ti. Fue un gusto poder ayudarte, suerte.”</p>
          </div>
             
-            <h3>Mockup en papael</h3>
+            <h3>Mockups en papael</h3>
             <img src="https://i.imgur.com/MDeqGOQ.jpg" width="60%">
+            <img src="https://i.imgur.com/EbzkVDW.jpg" width="60%">
          </center>
         </div>
 
