--- a/ProyectoFDI.html
+++ b/ProyectoFDI.html
@@ -21,11 +21,6 @@
             <button class="menu-icon" type="button"></button>
         </div>
     </div>
-        
-        <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-        <button class="menu-icon" type="button" data-toggle></button>
-        <div class="title-bar-title">Menu</div>
-    </div>
 
     <div class="top-bar" id="example-menu">
       <div class="top-bar-left">
@@ -43,20 +38,80 @@
                           <div class="row">
                             <div class="small-12 columns">
                               <label>Nombre completo del profesor
-                                <input type="text" placeholder="Ej. Juan Pérez García" aria-describedby="exampleHelpText" required pattern="number">
+                                <input type="text" placeholder="Ej. Juan Pérez García" aria-describedby="exampleHelpText" required pattern="text">
                               </label>
                             </div>
                             <div class="small-12 columns">
                               <label>Breve descripción del profesor
-                                <input type="text" placeholder="" aria-describedby="exampleHelpTex" data-abide-ignore>
+                                  <textarea></textarea>
                               </label>
                             </div>
                           </div>
-                          <div class="row">
-                            <fieldset class="medium-6 columns">
+                        <div class="medium-6 columns">
+                          <label>Materia que imparte
+                            <select id="select" required>
+                              <option value=""></option>
+                              <option>Matemáticas I</option>
+                                <option>Matemáticas II</option>
+                                <option>Matemáticas II</option>
+                                <option>Ecuaciones Diferenciales</option>
+                                <option>Física I</option>
+                                <option>Física II</option>
+                                <option>Electricidad y Magnetismo</option>
+                                <option>Estática</option>
+                                <option>Dinámica</option>
+                                <option>Fundamentos de Programación</option>
+                                <option>Programación Orientada a Objetos</option>
+                                <option>Estructura de Datos</option>
+                                <option>Algoritmos</option>
+                            </select>
+                          </label>
+                        </div>
+                        <div class="medium-6 columns">
+                          <label>Segunda materia que imparte
+                            <select id="select">
+                              <option value=""></option>
+                              <option>Matemáticas I</option>
+                                <option>Matemáticas II</option>
+                                <option>Matemáticas II</option>
+                                <option>Ecuaciones Diferenciales</option>
+                                <option>Física I</option>
+                                <option>Física II</option>
+                                <option>Electricidad y Magnetismo</option>
+                                <option>Estática</option>
+                                <option>Dinámica</option>
+                                <option>Fundamentos de Programación</option>
+                                <option>Programación Orientada a Objetos</option>
+                                <option>Estructura de Datos</option>
+                                <option>Algoritmos</option>
+                            </select>
+                          </label>
+                        </div>
+                        <div class="medium-6 columns">
+                          <label>Tercera materia que imparte
+                            <select id="select">
+                              <option value=""></option>
+                              <option>Matemáticas I</option>
+                                <option>Matemáticas II</option>
+                                <option>Matemáticas II</option>
+                                <option>Ecuaciones Diferenciales</option>
+                                <option>Física I</option>
+                                <option>Física II</option>
+                                <option>Electricidad y Magnetismo</option>
+                                <option>Estática</option>
+                                <option>Dinámica</option>
+                                <option>Fundamentos de Programación</option>
+                                <option>Programación Orientada a Objetos</option>
+                                <option>Estructura de Datos</option>
+                                <option>Algoritmos</option>
+                            </select>
+                          </label>
+                        </div>
+                          <div class="grid-x">
+                            <fieldset class="large-6 cell">
                               <button class="button" type="submit" value="Submit">Submit</button>
                             </fieldset>
-                            <fieldset class="medium-6 columns">
+                            <fieldset class="large-6 cell">
                               <button class="button" type="reset" value="Reset">Reset</button>
                             </fieldset>
                           </div>
@@ -73,13 +128,13 @@
     <center><div id="box">
         <div class="media-object">
           <div class="media-object-section">
-            <img src= "https://i.imgur.com/HzSI3zF.png">
+            <a href="https://rafaelelu.github.io/Profesor1.html"><img src= "https://i.imgur.com/HzSI3zF.png"></a>
           </div>
           <div class="media-object-section">
-            <h4>Prof. Juan Pérez García</h4>
+              <a hreaf="https://rafaelelu.github.io/Profesor1.html"><h4>Prof. Juan Pérez García</h4></a>
             <p>Breve descripción. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies sodales quam, tempor laoreet est sagittis sit amet. Integer consectetur metus vitae ipsum commodo, ac commodo lectus tempor. Nullam pretium eu nisl nec maximus. <br><br>
                 <b>Materia(s):</b> Matemáticas I, Matemáticas II y Matemáticas III.<br> 
-                <b>Calificación:</b> 12/15
+                <b>Calificación:</b> 9/10
             </p>
           </div>
         </div>
@@ -88,13 +143,13 @@
     <center><div id="box">
         <div class="media-object">
           <div class="media-object-section">
-            <img src= "https://i.imgur.com/UDG2dob.png">
+              <a href="https://rafaelelu.github.io/Profesor2.html"><img src= "https://i.imgur.com/UDG2dob.png"></a>
           </div>
           <div class="media-object-section">
-            <h4>Prof. Jorge Ramírez Sánchez</h4>
+              <a href="https://rafaelelu.github.io/Profesor2.html"><h4>Prof. Jorge Ramírez Sánchez</h4></a>
             <p>Breve descripción. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies sodales quam, tempor laoreet est sagittis sit amet. Integer consectetur metus vitae ipsum commodo, ac commodo lectus tempor. Nullam pretium eu nisl nec maximus. <br><br>
                 <b>Materia(s):</b> Física I y Electricidad y Magnetismo.<br> 
-                <b>Calificación:</b> 11/15
+                <b>Calificación:</b> 8/10
             </p>
           </div>
         </div>
@@ -103,13 +158,13 @@
     <center><div id="box">
         <div class="media-object">
           <div class="media-object-section">
-            <img src= "https://i.imgur.com/bb7opuo.jpg">
+            <a href="https://rafaelelu.github.io/Profesor3.html"><img src= "https://i.imgur.com/bb7opuo.jpg"></a>
           </div>
           <div class="media-object-section">
-            <h4>Prof. Francisco López Garza</h4>
+            <a href="https://rafaelelu.github.io/Profesor3.html"><h4>Prof. Francisco López Garza</h4></a>
             <p>Breve descripción. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies sodales quam, tempor laoreet est sagittis sit amet. Integer consectetur metus vitae ipsum commodo, ac commodo lectus tempor. Nullam pretium eu nisl nec maximus. <br><br>
                 <b>Materia(s):</b> Estática y Dinámica.<br> 
-                <b>Calificación:</b> 11/15
+                <b>Calificación:</b> 8/10
             </p>
           </div>
         </div>
