--- a/ProyectoFDI.html
+++ b/ProyectoFDI.html
@@ -131,7 +131,7 @@
             <a href="https://rafaelelu.github.io/Profesor1.html"><img src= "https://i.imgur.com/HzSI3zF.png"></a>
           </div>
           <div class="media-object-section">
-              <a hreaf="https://rafaelelu.github.io/Profesor1.html"><h4>Prof. Juan Pérez García</h4></a>
+              <a href="https://rafaelelu.github.io/Profesor1.html"><h4>Prof. Juan Pérez García</h4></a>
             <p>Breve descripción. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies sodales quam, tempor laoreet est sagittis sit amet. Integer consectetur metus vitae ipsum commodo, ac commodo lectus tempor. Nullam pretium eu nisl nec maximus. <br><br>
                 <b>Materia(s):</b> Matemáticas I, Matemáticas II y Matemáticas III.<br> 
                 <b>Calificación:</b> 9/10
