--- a/Profesor2.html
+++ b/Profesor2.html
@@ -25,7 +25,7 @@
     <div class="top-bar" id="example-menu">
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-          <li><a href="">Página Principal</a></li>
+          <li><a href="https://rafaelelu.github.io/ProyectoFDI.html">Página Principal</a></li>
             <li><a href="https://rafaelelu.github.io">Proyecto FDI</a></li>
             
         </ul>
