--- a/ProyectoFDI.html
+++ b/ProyectoFDI.html
@@ -109,10 +109,10 @@
                         </div>
                           <div class="grid-x">
                             <fieldset class="large-6 cell">
-                              <button class="button" type="submit" value="Submit">Submit</button>
+                              <button class="button" type="submit" value="Submit">Enviar</button>
                             </fieldset>
                             <fieldset class="large-6 cell">
-                              <button class="button" type="reset" value="Reset">Reset</button>
+                              <button class="button" type="reset" value="Reset">Resetear</button>
                             </fieldset>
                           </div>
                         </form>
