--- a/Profesor3.html
+++ b/Profesor3.html
@@ -44,6 +44,7 @@
                    Evalúa a este profesor</button></p>
                 <div class="reveal" id="exampleModal11" aria-labelledby="exampleModalHeader11" data-reveal>
                   <h1 id="exampleModalHeader11">Evaluación</h1>
+                    <p>Favor de llenar los reactivos tomando al 10 como mejor calificación y al 0 como peor calificación.</p>
                   <p class="lead">
                     
                       <form data-abide novalidate>
@@ -56,7 +57,7 @@
                           </div>
                       <div class="grid-x">
                         <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 1</legend>
+                          <legend>1. ¿Qué tanto consideras que hayas aprendido en este curso?</legend>
                           <input type="radio" name="a" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
                           <input type="radio" name="a" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
                           <input type="radio" name="a" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
@@ -70,7 +71,7 @@
                             <input type="radio" name="a" value="Yellow" id="pkm10"><label for="pkm10">10</label>
                         </fieldset>
                           <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 2</legend>
+                          <legend>2. ¿Qué tan dinámico consideras que fue el curso?</legend>
                            <input type="radio" name="b" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
                           <input type="radio" name="b" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
                           <input type="radio" name="b" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
@@ -84,7 +85,7 @@
                             <input type="radio" name="b" value="Yellow" id="pkm10"><label for="pkm10">10</label>
                         </fieldset>
                           <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 3</legend>
+                          <legend>3. ¿Tu profesor explicaba todo con claridad?</legend>
                            <input type="radio" name="c" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
                           <input type="radio" name="c" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
                           <input type="radio" name="c" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
@@ -98,7 +99,7 @@
                             <input type="radio" name="c" value="Yellow" id="pkm10"><label for="pkm10">10</label>
                         </fieldset>
                           <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 4</legend>
+                          <legend>4. ¿Tu profesor daba asesorías en el curso? ¿Qué tan bien las daba? (Si no daba asesorías, calificar como 0)</legend>
                            <input type="radio" name="d" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
                           <input type="radio" name="d" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
                           <input type="radio" name="d" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
@@ -112,7 +113,7 @@
                             <input type="radio" name="d" value="Yellow" id="pkm10"><label for="pkm10">10</label>
                         </fieldset>
                           <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 5</legend>
+                          <legend>5. ¿Qué tan probable es que recomiendes a este profesor?</legend>
                            <input type="radio" name="e" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
                           <input type="radio" name="e" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
                           <input type="radio" name="e" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
@@ -126,32 +127,13 @@
                             <input type="radio" name="e" value="Yellow" id="pkm10"><label for="pkm10">10</label>
                         </fieldset>
                           <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 6</legend>
-                          <input type="radio" name="f" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
-                          <input type="radio" name="f" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
-                          <input type="radio" name="f" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
-                            <input type="radio" name="f" value="Yellow" id="pokemonGreen"><label for="pokemonGreen">3</label>
-                            <input type="radio" name="f" value="Yellow" id="pokemonBrown"><label for="pokemonBrown">4</label>
-                            <input type="radio" name="f" value="Yellow" id="pokemonPurple"><label for="pokemonPurple">5</label>
-                            <input type="radio" name="f" value="Yellow" id="pkm6"><label for="pkm6">6</label>
-                            <input type="radio" name="f" value="Yellow" id="pkm7"><label for="pkm7">7</label>
-                            <input type="radio" name="f" value="Yellow" id="pkm8"><label for="pkm8">8</label>
-                            <input type="radio" name="f" value="Yellow" id="pkm9"><label for="pkm9">9</label>
-                            <input type="radio" name="f" value="Yellow" id="pkm10"><label for="pkm10">10</label>
+                          <legend>6. Si tuvieras la oportunidad de meter otra materia con este profesor, ¿lo harías?</legend>
+                          <input type="radio" name="f" value="Red" id="pokemonRed"><label for="pokemonRed">Sí</label>
+                          <input type="radio" name="f" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">No</label>
                         </fieldset>
                           <fieldset class="large-12 medium-12 small-12 cell">
-                          <legend>Pregunta 7</legend>
-                           <input type="radio" name="g" value="Red" id="pokemonRed"><label for="pokemonRed">0</label>
-                          <input type="radio" name="g" value="Blue" id="pokemonBlue" required><label for="pokemonBlue">1</label>
-                          <input type="radio" name="g" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">2</label>
-                            <input type="radio" name="g" value="Yellow" id="pokemonGreen"><label for="pokemonGreen">3</label>
-                            <input type="radio" name="g" value="Yellow" id="pokemonBrown"><label for="pokemonBrown">4</label>
-                            <input type="radio" name="g" value="Yellow" id="pokemonPurple"><label for="pokemonPurple">5</label>
-                            <input type="radio" name="g" value="Yellow" id="pkm6"><label for="pkm6">6</label>
-                            <input type="radio" name="g" value="Yellow" id="pkm7"><label for="pkm7">7</label>
-                            <input type="radio" name="g" value="Yellow" id="pkm8"><label for="pkm8">8</label>
-                            <input type="radio" name="g" value="Yellow" id="pkm9"><label for="pkm9">9</label>
-                            <input type="radio" name="g" value="Yellow" id="pkm10"><label for="pkm10">10</label>
+                          <legend>7. Si pudieras cambiar algo del profesor para mejorar la experiencia del curso, ¿que sería?</legend>
+                              <textarea></textarea>
                         </fieldset>
                           <div class="large-12 medium-12 small-12 cell">
                               <legend>Comentario(s):</legend>
@@ -176,16 +158,15 @@
                 </div>
                 
                 <p>
-                    <p><b>Materia(s): </b> Estática y Dinámica <br><br>
+                    <b>Materia(s): </b> Estática y Dinámica. <br><br>
                     <b>Calificación: </b> 9/10<br><br>
                     <b>Calificaciones por pregunta:</b><br>
-                    <b>Pregunta 1: </b>8/10<br>
-                    <b>Pregunta 2: </b>9/10<br>
-                    <b>Pregunta 3: </b>9/10<br>
-                    <b>Pregunta 4: </b>9/10<br>
-                    <b>Pregunta 5: </b>10/10<br>
-                    <b>Pregunta 6: </b>8/10<br>
-                    <b>Pregunta 7: </b>10/10
+                    <b>Aprendizage: </b>8/10<br>
+                    <b>Dinamismo: </b>9/10<br>
+                    <b>Claridad: </b>9/10<br>
+                    <b>Asesorías: </b>9/10<br>
+                    <b>Recomendación: </b>10/10<br>
+                    <b>Meterían otra materia con él: </b>Sí<br>
                 </p>
             </div>
         </div>
@@ -205,13 +186,12 @@
                 <button class="button" type="button" data-toggle="example-dropdown">Detalle de evaluación</button>
                 <div class="dropdown-pane" id="example-dropdown" data-dropdown>
                     <p>
-                        Pregunta 1: 10/10<br>
-                        Pregunta 2: 10/10<br>
-                        Pregunta 3: 10/10<br>
-                        Pregunta 4: 10/10<br>
-                        Pregunta 5: 10/10<br>
-                        Pregunta 6: 10/10<br>
-                        Pregunta 7: 10/10
+                        Aprendizage: 10/10<br>
+                        Dinamismo: 10/10<br>
+                        Claridad: 10/10<br>
+                        Asesorías: 10/10<br>
+                        Recomendación: 10/10<br>
+                        Metería otra materia con él: Sí<br>
                     </p>
                 </div>
             </div>
@@ -223,13 +203,12 @@
                 <button class="button" type="button" data-toggle="example-dropdown1">Detalle de evaluación</button>
                 <div class="dropdown-pane" id="example-dropdown1" data-dropdown>
                     <p>
-                        Pregunta 1: 6/10<br>
-                        Pregunta 2: 8/10<br>
-                        Pregunta 3: 10/10<br>
-                        Pregunta 4: 8/10<br>
-                        Pregunta 5: 10/10<br>
-                        Pregunta 6: 4/10<br>
-                        Pregunta 7: 10/10
+                        Aprendizage: 6/10<br>
+                        Dinamismo: 8/10<br>
+                        Claridad: 10/10<br>
+                        Asesorías: 8/10<br>
+                        Recomendación: 10/10<br>
+                        Metería otra materia con él: No<br>
                     </p>
                 </div>
             </div>
@@ -241,13 +220,12 @@
                 <button class="button" type="button" data-toggle="example-dropdown2">Detalle de evaluación</button>
                 <div class="dropdown-pane" id="example-dropdown2" data-dropdown>
                     <p>
-                        Pregunta 1: 7/10<br>
-                        Pregunta 2: 10/10<br>
-                        Pregunta 3: 7/10<br>
-                        Pregunta 4: 10/10<br>
-                        Pregunta 5: 9/10<br>
-                        Pregunta 6: 10/10<br>
-                        Pregunta 7: 10/10
+                        Aprendizage: 7/10<br>
+                        Dinamismo: 10/10<br>
+                        Claridad: 7/10<br>
+                        Asesorías: 10/10<br>
+                        Recomendación: 9/10<br>
+                        Metería otra materia con él: Sí<br>
                     </p>
                 </div>
             </div>
