--- a/ProyectoFDI.html
+++ b/ProyectoFDI.html
@@ -128,6 +128,29 @@
                         </form>
                 </div>
             </li>
+            
+            <li><button class="button" type="button" data-toggle="example-dropdown1">Agregar Materia</button>
+                <div class="dropdown-pane" id="example-dropdown1" data-dropdown>
+                    <form data-abide novalidate>
+                          <div class="row">
+                            <div class="small-12 columns">
+                              <label>Materia a agregar
+                                <input type="text" placeholder="Ej. Matemáticas I" aria-describedby="exampleHelpText" required pattern="text">
+                              </label>
+                            </div>
+                          </div>
+                          <div class="grid-x">
+                            <fieldset class="large-6 cell">
+                              <button class="button" type="submit" value="Submit">Enviar</button>
+                            </fieldset>
+                            <fieldset class="large-6 cell">
+                              <button class="button" type="reset" value="Reset">Resetear</button>
+                            </fieldset>
+                          </div>
+                        </form>
+                </div>
+            </li>
+            
           <li><input type="search" placeholder="Buscar profesor"></li>
           <li><button type="button" class="button">Buscar</button></li>
         </ul>
