--- a/ProyectoFDI.html
+++ b/ProyectoFDI.html
@@ -122,7 +122,7 @@
                               <button class="button" type="submit" value="Submit">Enviar</button>
                             </fieldset>
                             <fieldset class="large-6 cell">
-                              <button class="button" type="reset" value="Reset">Resetear</button>
+                              <button class="button" type="reset" value="Reset">Limpiar</button>
                             </fieldset>
                           </div>
                         </form>
@@ -144,7 +144,7 @@
                               <button class="button" type="submit" value="Submit">Enviar</button>
                             </fieldset>
                             <fieldset class="large-6 cell">
-                              <button class="button" type="reset" value="Reset">Resetear</button>
+                              <button class="button" type="reset" value="Reset">Limpiar</button>
                             </fieldset>
                           </div>
                         </form>
